--- a/main.html
+++ b/main.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html>
+	<head>
+    Website that is about prom ideas
+
+
+    -hair
+    -nails
+    -shoes
+    -makeup
+
+
+    Web page will have all the different elements for girls during prom in different sections. Click on an image and it’ll take you to more images related to the one you have chose. Make colleges of cute ideas.
+
+    The images will keep you interested and searching forever until you get tired of seeing cute things
+
+
+    Places where you can get it done or buy it from will be linked. You will be asked to put in where your located to make links more prone to where you live.
+
+	</head>
+
+	<body>
+
+  <button onclick="document.getElementById('dress').src='Dress2.jpg'">Click Here for Another Dress</button>
+  <button onclick="document.getElementById('hair').src='HairOption2.jpg'">Click To See Another Hairstyle</button>
+  <button onclick="document.getElementById('nail').src='Nails2.jpg'">Click Here for Another Image of Nails</button>
+  <button onclick="document.getElementById('makeup').src='Makeup2.jpg'">Click Here for Another Makeup Image</button>
+
+  <h1>Helpful Prom Ideas</h1>
+
+  <p style="color:SlateBlue;">Here is just a few images to get ideas for prom.If you do not have an idea on what to wear or how to do your makeup, nails, or hair. This is the page to come to for great ideas.</p>
+
+    <h3>Dresses<h3>
+   <img id="dress" src="./Dress1.jpg" height="300" width="300">
+
+    <h3>Hair</h3>
+    <img id="hair" src="./Hair1.jpg" height="300" width="300">
+
+    <h3>Nails</h3>
+    <img id="nail" src="./Nails1.jpg" height="300" width="300">
+
+    <h3>Makeup</h3>
+    <img id="makeup" src="./Makeup1.jpg" height="300" width="300"
+
+
+	</body>
+</html>
 
