--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
   <p style="color:SlateBlue;">Here is just a few images to get ideas for prom.If you do not have an idea on what to wear or how to do your makeup, nails, or hair. This is the page to come to for great ideas.</p>
 
     <h3>Dresses<h3>
-   <img id="dress" src="./![dress1](https://user-images.githubusercontent.com/40872170/42348861-cddf1fe6-805f-11e8-819e-02109458e3be.jpg)" height="300" width="300">
+   <img id="dress" src="https://user-images.githubusercontent.com/40872170/42348861-cddf1fe6-805f-11e8-819e-02109458e3be.jpg" height="300" width="300">
 
     <h3>Hair</h3>
     <img id="hair" src="./Hair1.jpg" height="300" width="300">
