--- a/main.html
+++ b/main.html
@@ -21,10 +21,10 @@
 
 	<body>
 
-  <button onclick="document.getElementById('dress').src='Dress2.jpg'">Click Here for Another Dress</button>
-  <button onclick="document.getElementById('hair').src='HairOption2.jpg'">Click To See Another Hairstyle</button>
-  <button onclick="document.getElementById('nail').src='Nails2.jpg'">Click Here for Another Image of Nails</button>
-  <button onclick="document.getElementById('makeup').src='Makeup2.jpg'">Click Here for Another Makeup Image</button>
+  <button onclick="document.getElementById('dress').src='https://user-images.githubusercontent.com/40872170/42349184-a9806668-8060-11e8-8866-bef6209e85cd.jpg'">Click Here for Another Dress</button>
+  <button onclick="document.getElementById('hair').src='https://user-images.githubusercontent.com/40872170/42349240-eae535de-8060-11e8-974c-436006672ca3.png'">Click To See Another Hairstyle</button>
+  <button onclick="document.getElementById('nail').src='https://user-images.githubusercontent.com/40872170/42349303-29b33c66-8061-11e8-87ef-ade406c4cea1.jpg'">Click Here for Another Image of Nails</button>
+  <button onclick="document.getElementById('makeup').src='https://user-images.githubusercontent.com/40872170/42349288-1a3d50fa-8061-11e8-9f19-a449e630f9e5.jpg'">Click Here for Another Makeup Image</button>
 
   <h1>Helpful Prom Ideas</h1>
 
@@ -34,13 +34,13 @@
    <img id="dress" src="https://user-images.githubusercontent.com/40872170/42348861-cddf1fe6-805f-11e8-819e-02109458e3be.jpg" height="300" width="300">
 
     <h3>Hair</h3>
-    <img id="hair" src="./Hair1.jpg" height="300" width="300">
+    <img id="hair" src="https://user-images.githubusercontent.com/40872170/42349215-ce317448-8060-11e8-9724-b9725093e454.jpg" height="300" width="300">
 
     <h3>Nails</h3>
-    <img id="nail" src="./Nails1.jpg" height="300" width="300">
+    <img id="nail" src="https://user-images.githubusercontent.com/40872170/42349324-3feafc08-8061-11e8-94fd-44e7369c454c.jpg" height="300" width="300">
 
     <h3>Makeup</h3>
-    <img id="makeup" src="./Makeup1.jpg" height="300" width="300"
+    <img id="makeup" src="https://user-images.githubusercontent.com/40872170/42349277-0f7185d8-8061-11e8-87be-08ac6c5a703e.jpg" height="300" width="300"
 
 
 	</body>
